Added position plot to HTML.
HTML source is now rendered in background using buffering.

--- a/robot-control-src/control-mask.html
+++ b/robot-control-src/control-mask.html
@@ -3,7 +3,7 @@
   <head>
     <title>Robot Control</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.6">
   </head>
   <body>
   <main>
@@ -16,6 +16,7 @@
     </tbody>
     </table>
   </form>
+  <img style="max-width:90vw; max-height:100vh;" src="https://david.hebbeker.info/robot-control.php?positions=%s" />
   </main>
   </body>
 </html>
