Manage different activities by webserver.

--- a/robot-control-src/control-mask.html
+++ b/robot-control-src/control-mask.html
@@ -9,7 +9,7 @@
   <body>
   <main>
   <form method="post" action="/">
-    <fieldset disabled>
+    <fieldset%s>
       <legend>Direct control</legend>
       <table>
       <tbody style="text-align:center; vertical-align:middle;">
@@ -19,7 +19,7 @@
       </tbody>
       </table>
     </fieldset>
-    <fieldset>
+    <fieldset%s>
       <legend>Follow wall</legend>
       <button type="submit" name="%sFW" title="%s following wall">&#x%hX;</button>
     </fieldset>
